--- a/res/layout/list_screen_activity.xml
+++ b/res/layout/list_screen_activity.xml
@@ -27,9 +27,9 @@
 
         <ImageButton
             android:id="@+id/topbar_about_button"
-            android:background="@drawable/back_button_topbar"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
+            android:background="@drawable/logo"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_centerVertical="true"
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
@@ -38,24 +38,27 @@
 
         <ImageButton
             android:id="@+id/topbar_config_button"
-            android:background="@drawable/back_button_topbar"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
+            android:background="@drawable/configuration"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_centerVertical="true"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
             android:contentDescription="@string/image_description_default"/>
     </RelativeLayout>
 
     <ListView
         android:id="@+id/listView"
+        android:layout_below="@+id/topbar_description"
         android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
+    	android:layout_marginBottom="65dp"
     	android:dividerHeight="1dp"
         android:divider="#E6E5EC"
         android:clickable="true" >
-    </ListView>
-
+    </ListView>	
 
     <RelativeLayout
         android:layout_width="match_parent"
