--- a/res/layout/quota_grid_item.xml
+++ b/res/layout/quota_grid_item.xml
@@ -4,10 +4,11 @@
 	android:layout_width="120dp"
 	android:layout_height="110dp" >
      
-    <ImageView
+    <br.com.visualize.akan.api.helper.RoundedImageView
          android:id="@+id/bkg_quota_imageview"
          android:contentDescription="@string/image_description_default"
          android:layout_margin="2dp"
+         android:padding="22dp"
          android:layout_width="110dp"
          android:layout_height="95dp"
          android:layout_centerHorizontal="true"
@@ -22,7 +23,9 @@
          android:layout_height="95dp"	
          android:layout_centerHorizontal="true"
          android:layout_alignParentTop="true"
-         android:background="@drawable/quota_technical_work_and_consulting" />
+         android:scaleType="fitXY"
+         android:background="@drawable/background_quota"
+         android:src="@drawable/quota_technical_work_and_consulting" />
      
      <ImageView
 		 android:id="@+id/bar_quota_imageview"
@@ -33,7 +36,7 @@
 		 android:layout_centerHorizontal="true"
          android:layout_alignParentTop="true"         
 		 android:scaleType="fitXY"
-		 android:src="@anim/level_bars_lease_of_vehicles" />
+		 />
      
      <TextView
          android:id="@+id/quota_text"
