--- a/res/layout/list_screen_activity.xml
+++ b/res/layout/list_screen_activity.xml
@@ -11,7 +11,7 @@
     <RelativeLayout
 	    android:id="@+id/topbar_search_layer"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:layout_alignParentTop="true"
         android:layout_marginBottom="65dp"
         android:background="#ABABAB" >
