--- a/res/layout/ranking_layout.xml
+++ b/res/layout/ranking_layout.xml
@@ -114,7 +114,8 @@
             android:layout_margin="15dp"
             android:id="@+id/ranking_layout_txt_congressman_name"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:maxWidth="220dp"
+            android:layout_height="20dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:textColor="#536571"
