--- a/res/layout/about_akan_screen_activity.xml
+++ b/res/layout/about_akan_screen_activity.xml
@@ -1,15 +1,77 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" >
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#505F69" >
+    <RelativeLayout
+        android:id="@+id/topbar_about"
+        android:layout_width="fill_parent"
+        android:layout_height="50dp"
         android:layout_alignParentTop="true"
-        android:text="Large Text"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:background="#5B6C78" >
+
+        <TextView
+            android:id="@+id/topbar_quota"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:text="@string/app_name"
+            android:textColor="#ffffff"
+            android:textStyle="bold"
+            android:textSize="20sp" />
+           
+
+        <ImageButton
+            android:id="@+id/topbar_about_button"
+            android:background="@drawable/dismiss"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
+            android:contentDescription="@string/image_description_default"
+            android:onClick="backToList"/>
+        
+    </RelativeLayout>
+    
+    <ScrollView 
+        android:id="@+id/content_about"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/topbar_about">
+        <RelativeLayout
+            android:id="@+id/akan_about_information"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+            
+           <ImageView 
+           	    android:id="@+id/about_logo"
+            	android:background="@drawable/logo_bigger"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/image_description_default"
+                android:layout_centerHorizontal="true"/>
+           
+           <TextView
+            android:id="@+id/about_text"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:text="@string/about_akan"
+            android:textColor="#ffffff"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:layout_below="@id/about_logo" />
+            
+            
+        </RelativeLayout>
+        
+        
+    </ScrollView>
+
     
 </RelativeLayout>
