Configuration screen: Implementig congressmen Ordering
Fixing some bugs in list screen too.

--- a/res/layout/activity_configurations.xml
+++ b/res/layout/activity_configurations.xml
@@ -177,7 +177,7 @@
 		        android:layout_width="wrap_content"
 		        android:layout_height="wrap_content"
 		        android:gravity="center"
-		        android:text="partido"
+		        android:text="estado"
 		        android:textColor="#FFFFFF"
 		        android:textSize="13sp" />
 		
